small alignment fix.

--- a/wdn/templates_3.0/css/footer/footer.css
+++ b/wdn/templates_3.0/css/footer/footer.css
@@ -90,7 +90,7 @@ Author: WDN
 }
 #wdn_logos {
     position:absolute;
-    right:0px;
+    right:12px;
     bottom:12px;
 }
 
